@@ -2,6 +2,7 @@
                    | CHANGES of the numericalsgps package |
                    ----------------------------------------
 1->1 dev
+- External packages section in Affine Semigroups chapter was moved to its own chapter
 - Added MinimalGenerators and Generators for affine semigroups
 - Allowed a second argument in AperyList (an integer) and then AperyListOfNumericalSemigroupWRTElement or AperyListOfNumericalSemigroupWRTInteger is called depending on the membership of the integer to the semigroup
 - NumericalSegrmioupByMinimalGenerators and NumericalSegrmioupByMinimalGeneratorsNC will be deprecated, and so are now undocumented
